feat(p0-astra-analysis): implemented
